Another big commit ...

--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,13 @@ a {
 }
 
 body {
+    padding-top: 60px;
     padding-left: 100px;
     padding-right: 100px;
-    font-family: monospace;
 }
 
-header {
-    text-align: center;
+.navbar {
+    font-family: monospace;
 }
 
 h2 .selector {
@@ -33,13 +33,10 @@ h2 .selector {
     font-family: 'TheSerifOffice',georgia,serif;
 }
 
-footer {
-    text-align: right;
-}
-
 .post_header {
     border-left: solid 5px black;
     padding-left: 5px;
+    margin-bottom: 1em;
 }
 
 .post_title {
@@ -52,8 +49,6 @@ footer {
 
 pre {
     font-family: monospace;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
     -moz-border-radius: 15px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
@@ -65,5 +60,7 @@ code {
 }
 
 footer {
+    margin-top: 2em;
+    text-align: right;
     font-family: monospace;
 }
