--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,13 @@
 	<title>~Nemoworld~ : {{title}}</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/main.css" type="text/css">
-        <!--<style>
-          body {
-            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-          }
-        </style>-->
         <link rel="stylesheet" href="/css/bootstrap-responsive.css">
+        <link rel="stylesheet" href="/css/pygments/default.css">
 	<meta charset="utf-8"/>
 </head>
 
 <body>
-    <header><h1><a href="/">~Nemoworld~</a></h1></header>
-
-    <div class="navbar navbar-fixed-top">
+    <header class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -27,14 +21,14 @@
           <a class="brand" href="/">~Nemoworld~</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/blog.html">Latest news</a></li>
+              <li><a href="/news.html">Latest news</a></li>
               <li><a href="/projects">Projects</a></li>
               <li><a href="/misc/">Misc</a></li>
             </ul>
           </div>
         </div>
       </div>
-    </div>
+    </header>
     
     <div class="page">
     {{ content }}
