--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ h2 .selector {
     font-weight: bold;
 }
 
+.post_date {
+    font-family: monospace;
+}
+
 .post {
 }
 
@@ -63,4 +67,8 @@ footer {
     margin-top: 2em;
     text-align: right;
     font-family: monospace;
+}
+
+ul p {
+    margin-top: 10px;
 }
