--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
   <footer>
     <div class="container">
-      <p>Propelled by <a href="https://github.com/mojombo/jekyll">Jekill</a>.<br/>
+      <p>Propelled by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.<br/>
          &copy; 1997-2013 Nicolas R Dufour &lt;nrdufour@gmail.com&gt;
       </p>
     </div>
