--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 {% include head.html %}
 
-<body>
-    <header class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">~Nemoworld~</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href="/news.html">Latest news</a></li>
-              <li><a href="/projects">Projects</a></li>
-              <li><a href="/misc/">Misc</a></li>
-            </ul>
-          </div>
-        </div>
+  <body>
+
+    {% include navbar.html %}
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+          {{ content }}
+        </div> 
       </div>
-    </header>
-    
-    {{ content }}
-
-  <footer>
-    <div class="container">
-      <p>Propelled by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.<br/>
-         &copy; 1997-2013 Nicolas R Dufour &lt;nrdufour@gmail.com&gt;
-      </p>
     </div>
-  </footer>
 
-  <script src="/js/jquery-1.8.2.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-</body>
+    <footer class="footer">
+      <div class="container">
+        <p>Propelled by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.<br/>
+           &copy; 1997-2015 Nicolas R Dufour &lt;nrdufour@gmail.com&gt;
+        </p>
+      </div>
+    </footer>
 
+    <script src="/js/jquery-1.8.2.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+  </body>
 </html>
