--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,18 +2,9 @@
 layout: default
 ---
 
-<div class="container">
-  <div class="row">
-    <div class="span10 offset1 post">
-
-      <div class="post_header">
-        <span class="post_title">{{ page.title }}</span> <br/> {{ page.date | date_to_long_string }}
-      </div>
-      <div class="post_body">
-        {{ content }}
-      </div>
-
-    </div>
-  </div>
+<div class="post_header">
+  <span class="post_title">{{ page.title }}</span> <br/> {{ page.date | date: '%B %d, %Y' }}
 </div>
-
+<div class="post_body">
+  {{ content }}
+</div>
