--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-              <li><a href="/news.html">Latest news</a></li>
+              <li><a href="/news/">Latest news</a></li>
               <li><a href="/projects/">Projects</a></li>
               <li><a href="/notes/">Notes</a></li>
           </ul>
