Another round of changes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
 {% include head.html %}
 
   <body>
-
     {% include navbar.html %}
 
     <div class="container-fluid">
@@ -15,15 +14,6 @@
       </div>
     </div>
 
-    <footer class="footer">
-      <div class="container">
-        <p>Propelled by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.<br/>
-           &copy; 1997-2015 Nicolas R Dufour &lt;nrdufour@gmail.com&gt;
-        </p>
-      </div>
-    </footer>
-
-    <script src="/js/jquery-1.8.2.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    {% include footer.html %}
   </body>
 </html>
