--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
-layout: default
+layout: page
 ---
 
 <div class="post_header">
-  <span class="post_title">{{ page.title }}</span> <br/> {{ page.date | date: '%B %d, %Y' }}
+  <span class="glyphicon glyphicon-globe"></span> {{ page.date | date: '%B %d, %Y' }}
 </div>
 <div class="post_body">
   {{ content }}
