--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
       <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,13 +7,16 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">~Nemoworld~</a>
+          <a class="navbar-brand" href="/">
+            ~Nemoworld~
+          </a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
               <li><a href="/news/">Latest news</a></li>
               <li><a href="/projects/">Projects</a></li>
               <li><a href="/notes/">Notes</a></li>
+              <li><a href="/about/">About</a></li>
           </ul>
       </div><!--/.nav-collapse -->
   </div>
