--- a/css/main.css
+++ b/css/main.css
@@ -12,30 +12,8 @@ a {
 }
 
 body {
-    //background-color: #F2F4F5;
-    padding-top: 60px;
+    padding-top: 70px;
     margin-bottom: 60px;
-}
-
-.navbar {
-    font-family: monospace;
-}
-
-h2 .selector {
-    font-size: x-small;
-}
-
-.page {
-    margin-left: 12.5%;
-    margin-right: 12.5%;
-}
-
-.page section {
-    padding: 5px;
-}
-
-.page section h2 {
-    font-family: 'TheSerifOffice',georgia,serif;
 }
 
 .post_header {
@@ -55,14 +33,8 @@ h2 .selector {
 
 .post {
     margin-bottom: 5px;
-    border-top: 1px dashed gray;
+    border-bottom: 1px dashed gray;
 }
-
-/*footer {
-    margin-top: 2em;
-    text-align: right;
-    font-family: monospace;
-}*/
 
 .footer {
     position: absolute;
@@ -74,6 +46,15 @@ h2 .selector {
     padding-top: 5px;
 }
 
-ul p {
-    margin-top: 10px;
+.main-banner {
+    background-image:url("/img/sensor_version_1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: right;
+    color: white;
+    border-radius: 15px 50px;
+}
+
+.main-banner small {
+    color: lightgray;
 }
