--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -2,12 +2,10 @@
 
 <ol class="breadcrumb">
     {% for crumb in crumbs offset: 1 %}
-    <li>
         {% if forloop.last %}
-        {{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}
+        <li class="active">{{ page.title | capitalize }}</li>
         {% else %}
-        <a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a>
+        <li><a href="{% assign crumb_limit = forloop.index | plus: 1 %}{% for crumb in crumbs limit: crumb_limit %}{{ crumb | append: '/' }}{% endfor %}">{{ crumb | replace:'-',' ' | remove:'.html' | capitalize }}</a></li>
         {% endif %}
-    </li>
     {% endfor %}
 </ol>
