--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,16 @@
 {% include head.html %}
 
   <body>
-    {% include navbar.html %}
+    <div class="container">
+        {% include navbar.html %}
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-          {{ content }}
-        </div> 
-      </div>
+        <div class="container-fluid">
+            {{ content }}
+        </div>
+
+        {% include footer.html %}
     </div>
 
-    {% include footer.html %}
+    {% include js.html %}
   </body>
 </html>
