--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,7 @@
               <li><a href="/news/">Latest news</a></li>
               <li><a href="/projects/">Projects</a></li>
               <li><a href="/notes/">Notes</a></li>
+              <li><a href="/recipes/">Recipes</a></li>
               <li><a href="/about/">About</a></li>
           </ul>
       </div><!--/.nav-collapse -->
